sample-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: sample-app
spec:
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
