sample-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
  namespace: sample-app
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: ""
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-demo
                port:
                  number: 80
